Submitted section took new direction.

--- a/tex/03_body_section_01.tex
+++ b/tex/03_body_section_01.tex
@@ -1,12 +1,12 @@
 
-\section{What accounts for a successful Cyber Security Strategy?}
+\section{What accounts for a successful Cyber Security Strategy?}\label{Sucessful_NCSS}
 
 There are many components, layers and moving parts that needs to be addressed for a successul implementations of a National Information and Cyber Security Strategy.
 
 \begin{itemize}
     \item International standards and policies
     \item Regional standards and policies
-    \item Natioanl standards and policies
+    \item National standards and policies
     \item Sector (private or public) policies
     \item Industry standards, best practices and policies
     \item Technical education, proficiencies and comprehentions
@@ -24,9 +24,9 @@ After tracing back the initiative's history and understanding its requirements a
 
 \subsection{The European Union's NIS Directive and its Annex}
 
-On the 6th of July 2016, the European Union \footnote[2]{more specifically: the European Comission proposes a Directive, a bill of law, and the EU Council and thhe EU Parliament deliberates and votes if the new Directive or bill will pass, be approved.} has approved and signed off on \acrfull{nis}. It is a legislation affecting all European Union member states, and its trading partners in the \Gls{ESM} \footnote[2]{\url{https://en.wikipedia.org/wiki/European_Single_Market for moredetails}}. All EU member states are mandated to "tranpose", or incorporate the directive into their National legislations by 9th of May 2018. In the 2nd of October 2020, a review of the Directive has been conducted, and a revised NIS has been presented to the European Comission on 6th of December 2020.
+On the 6th of July 2016, the European Union \footnote[2]{More specifically: the European Comission proposes a Directive, a bill of law, and the EU Council and thhe EU Parliament deliberates and votes if the new Directive or bill will pass, be approved.} has approved and signed off on \acrfull{nis}. It is a legislation affecting all European Union member states, and its trading partners in the \Gls{ESM} \footnote[3]{\url{https://en.wikipedia.org/wiki/European_Single_Market for moredetails}}. All EU Member States are mandated to "tranpose", or incorporate the directive into their National legislations and have a \acrfull{ncss} by 9th of May 2018.
 
-The Directive has 3 annex documents. The annexies provides more context and clarity to the Directive.
+The Directive has 3 annex documents. The annexies provides more context and clarity to the Directive. Where the Directive can be regarded a as formal legislative document, with the language to match. The annex documents explains and expands on the task, requirements and scope of the Directive with a language that matches its intended audience.
 
 \begin{itemize}
     \item Annex 1
@@ -43,7 +43,7 @@ The Directive has 3 annex documents. The annexies provides more context and clar
         \end{itemize}
 \end{itemize}
 
-Where the Directive can be regarded a as formal legislative document, with the language to match. The annex documents explains and expands on the task, requirements and scope of the Directive with a language that matches its intended audience.
+In the 2nd of October 2020, a review of the Directive has been conducted, and a revised NIS has been presented and proposed to the European Comission on 6th of December 2020 by the NIS Cooperation Group.
 
 \subsubsection{NIS' objectives}
 According the the NIS Corrigendum, \cite{EuropeanCommission2017} , a communication by the European Commission to its Member States, the Directive has 3 main objectives:
@@ -58,7 +58,7 @@ However, each Member State are expected to expand on the 3 main objectives, and 
 
 \subsubsection{NIS' scope}
 
-As indicated in the list above, Annex 2 and 3 outlines the scope of the directive. The Directive does not describe in detail what the scope is. Instead the Annex provides a guideline to identify what constitutes a \acrfull{oes}, as can be read in Section 4.1 in the Annex 3 \acrshort{oes}. As of 16th of December 2020, NIS2\footnote[4]{Please see moredetails regarding NIS2 in \url{https://ec.europa.eu/digital-single-market/en/news/revised-directive-security-network-and-information-systems-nis2}} proposal has been sent to the European Comission expanding the scope of sectors and services from 7 to 15. 
+As indicated in the list above, Annex 2 and 3 outlines the scope of the directive. The Directive does not describe in detail what the scope is. Instead the Annex provides a guideline to identify what constitutes a \acrfull{oes}, as can be read in Section 4.1 in the Annex 3 \acrshort{oes}. As of 16th of December 2020, NIS2\footnote[4]{Please see more details regarding NIS2 in \url{https://ec.europa.eu/digital-single-market/en/news/revised-directive-security-network-and-information-systems-nis2}} proposal has been sent to the European Comission expanding the scope of sectors and services from 7 to 15. 
 
 \begin{figure}[H]
     \includegraphics[width=0.4\textwidth]{tex/NIS1_Sectors_and_Scope.png}
@@ -67,10 +67,13 @@ As indicated in the list above, Annex 2 and 3 outlines the scope of the directiv
     \includegraphics[width=0.4\textwidth]{tex/NIS2_Sectors_and_Scope.png}
 \end{figure}
 
-
-With regards to the Banking and Financial Sector, NIS directive requires that member states that are not within the Banking Union to be regulated and supervised by a relevant banking authority. Such is the case for Norway, having Finans Tisynet as the Financial Authority with the responsibility to enforce seucirty measures and standards as required by within the European Union.
+With regards to the Banking and Financial Sector, NIS directive requires that member states that are not within the Banking Union to be regulated and supervised by a relevant banking authority. Such is the case for Norway, by having Finans Tilsynet as the Financial Authority with the responsibility to enforce policies for security measures and mandate standards as required within the European Union or by the different banking, exchange and securities \footnote[5]{Security as a financial term: a tradable financial assesset. Not security as adjective for safety, or verb as to "secure something".} authorities and agencies.
 
 \subsubsection{The NIS Trasposition}
+
+Looking back at the list, the layered components of a Cyber Security Strategy from page \pageref{Successful_NCSS}, the transposition of the NIS Directive is the adoptation of the Directive into each Member States national standards and policies for Information and Cyber SEcurity. The NIS Deirective has set the deadline for its Member States to have conducted the trasposition by 9th of May 2018.
+
+The EU Commission is aware of the challenges with regars to the transposition of the Directive into each Members State's legislationThe adoptation of the Directive does not require a full impl
 
 
 \subsubsection{Review and continuos improvement}
